sass/_share.scss
.share {
  display: block;
  float: right;
  margin: -5px 0 0 0;
  list-style-type: none;
  li {
    display: inline;
    float: left;
    margin: 0 10px 0 0;
  }
  .like {
    position: relative;
    top: -5px;
    @media (max-width: $x-small) {
      top: 0;
    }
  }
  @media (max-width: $medium) {
    float: left;
    width: 100%;
    margin-top: 4px;
  }
}

